--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,10 @@
 <body>
     <h1 style="color:forestgreen">The Fradulent Activity Detector</h1>
     <p>This app will find and detect fraudulent activity.</p>
+    <p>The table is ordered by the 'Risk Factor' and displays the 50 most recent entries.</p>
+
+    <p>If Risk Factor is 'Unable to Predict', our model was not able to determine a Fraud Probability/Risk Factor.</p>
+    <p>In that case, your Frauds Department should investigate further.</p>
 
     <div class="container">
         <p>Events:</p>
