--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 style="color:forestgreen">The Fradulent Activity Detector</h1>
+    <h1 style="color:forestgreen">The Fraudulent Activity Detector</h1>
     <p>This app will find and detect fraudulent activity.</p>
     <p>The table is ordered by the 'Risk Factor' and displays the 50 most recent entries.</p>
 
