add src ref to html

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
   <title>Fraudulent Activity Detector</title>
   <meta name="description" content="Fraud Detector">
   <meta name="author" content="Ben Weintraub, Cindy Wong, Tyler Woods">
+  <script src="static/node_modules/chart.js/dist/Chart.bundle.js"></script>
 
 </head>
 
